--- a/public/index.css
+++ b/public/index.css
@@ -10,18 +10,22 @@ body {
     align-items: center;
     min-height: 100vh;
     font-family: Arial, sans-serif;
-    background-color: #f3f4f6;
+    background-image: url(./images/Background.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .login-container {
-    background-color: #AEA6FF;
+    background-color: #ffffff;
     padding: 2rem;
-    border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: -10px 10px 10px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 400px;
     text-align: center;
-    border: 2px solid black;
+    a {
+        color: black;
+    }
 }
 
 h2 {
@@ -42,25 +46,26 @@ input[type="password"] {
     width: 100%;
     padding: 0.8rem;
     margin-bottom: 1rem;
-    border: 2px solid black;
     border-radius: 10px;
     font-size: 1rem;
+    background-color: #F3F3F3;
+    border: 1px #BCBCBC solid;
 }
 
 button {
     width: 50%;
     padding: 0.8rem;
+    margin-bottom: 1rem;
     border: none;
-    background-color: #55C3FF;
+    background-color: #FF9F1C;
     color: #ffffff;
     font-size: 1rem;
     font-weight: bold;
     border-radius: 30px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    border: 2px solid black;
 }
 
 button:hover {
-    background-color: #48a1d1;
+    background-color: #d88818;
 }
