--- a/public/test.css
+++ b/public/test.css
@@ -6,7 +6,10 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
+  background-image: url(./images/Background.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .container {
@@ -14,14 +17,13 @@ body {
   max-width: 1200px; /* Increased width for desktop */
   margin: auto;
   padding: 20px;
-  background-color: #e5f7f1;
 }
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 0;
+  padding: 20px;
 }
 
 .logo {
@@ -66,6 +68,10 @@ nav a {
   padding: 10px 15px;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.search {
+  margin-right: 10px;
 }
 
 .pet-grid {
@@ -118,6 +124,19 @@ nav a {
   font-size: 16px;
 }
 
+header a {
+  color: black; /* Set your link color */
+  transition: text-decoration-color 0.3s ease; /* Smooth transition for the underline */
+  text-underline-offset: 5px; /* Distance of underline from the text */
+  text-decoration-style: solid;
+  text-decoration: underline transparent solid 5px;
+}
+
+header a:hover {
+  text-decoration-color: purple; /* Set your underline color on hover */
+}
+
+
 /* Responsive adjustments for smaller screens */
 @media (max-width: 600px) {
   nav a, .sign-in {
@@ -131,6 +150,11 @@ nav a {
   .search-bar {
     flex-direction: column;
     align-items: stretch;
+  }
+
+  .search {
+    margin-bottom: 10px;
+    width: 100%;
   }
 
   .search-bar input {
