beginning cloudinary integration

--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="/addpet" class="add-pet-btn">Add New Pet</a>
+        <a href="/addPet" class="add-pet-btn">Add New Pet</a>
         
         <div class="pet-grid">
             <% pets.forEach(pet => { %>
