--- a/public/test.css
+++ b/public/test.css
@@ -88,7 +88,7 @@ header a:hover {
 .search-bar {
   display: flex;
   justify-content: space-between;
-  margin: 30px 0;
+  margin: 0 0 30px 0;
 }
 
 .search-bar input {
