--- a/views/addPet.ejs
+++ b/views/addPet.ejs
@@ -13,7 +13,7 @@
             <div class="error"><%= error %></div>
         <% } %>
 
-        <form action="/addPet" method="POST" enctype="multipart/form-data">
+        <form action="/pets/addPet" method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <label>Name</label>
                 <input type="text" name="name" required>
