--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -10,9 +10,9 @@
     <header>
         <div class="logo">Logo</div>
         <nav>
-            <a href="/">Home</a>
+            <a href="/pets">Home</a>
             <a href="#">Adopt</a>
-            <a href="login"><button class="sign-in">Sign In</button></a>
+            <a href="/login"><button class="sign-in">Sign In</button></a>
         </nav>
     </header>
     <div class="container">
