--- a/public/index.css
+++ b/public/index.css
@@ -16,13 +16,13 @@ body {
     background-size: cover;
 }
 
-.login-container {
+.login-container, .signup-container, .container {
     background-color: #ffffff;
     padding: 2rem;
     margin: 4rem;
     box-shadow: -10px 10px 10px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
-    max-width: 20rem;
+    max-width: 25rem;
     text-align: center;
     a {
         color: black;
@@ -45,7 +45,10 @@ label {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"], 
+input[type="number"],
+input[type="email"],
+textarea {
     width: 100%;
     padding: 0.4rem;
     margin-bottom: 1rem;
@@ -59,6 +62,7 @@ button {
     width: 50%;
     padding: 0.8rem;
     margin-bottom: 1rem;
+    margin-top: 1rem;
     border: none;
     background-color: #FF9F1C;
     color: #ffffff;
@@ -71,6 +75,25 @@ button {
 
 button:hover {
     background-color: #d88818;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload {
+    display: inline-block;
+    padding: 10px 20px;
+    color: white;
+    background-color: #000000; /* Customize as desired */
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 12px;
+    transition: background-color 0.3s;
+}
+
+.form-group small {
+    font-size: x-small;
 }
 
 .gallery {
