--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -6,6 +6,33 @@
     <title>Home</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo">Logo</div>
+        <nav>
+            <a href="/pets">Home</a>
+            <a href="/pets/addPet">Add Pet</a>
+            <a href="/pets/gallery">Gallery</a>
+            <a href="/login"><button class="sign-in">Sign In</button></a>
+        </nav>
+    </header>
+
+    <div class="container">
+        <div class="mainLogo">
+            <img src="./images/Capture.PNG" alt="">
+        </div>
+        <hr>
+        <div class="aboutUs">
+            <h2>Welcome to Pet Adoption Platform</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, purus nec vulputate bibendum, ex velit semper ligula, non malesuada lectus enim vel nisi. Sed consectetur, erat sed aliquet condimentum, felis mauris malesuada diam, ut efficitur mauris ipsum vitae purus.</p>
+        </div>
+
+        <h2>Testimonials</h2>
+        <div class="testimonials">
+            <img src="./images/Capture.PNG" alt="">
+            <img src="./images/Capture.PNG" alt="">
+            <img src="./images/Capture.PNG" alt="">
+        </div>
+    </div>
+
 </body>
 </html>
