--- a/views/addPet.ejs
+++ b/views/addPet.ejs
@@ -50,8 +50,8 @@
             </div>
 
             <div class="form-group">
-                <label for="mainImage">Main Image</label>
-                <input type="file" id="mainImage" name="mainImage" accept="image/*" required>
+                <label for="image">Main Image</label>
+                <input type="file" id="image" name="image" accept="image/*" required>
                 <small>Please select an image file (JPG, PNG, etc.)</small>
             </div>
 
