--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,16 @@
     <title>Login</title>
 </head>
 <body>
-    
+    <h1>Log In</h1>
+    <form action="/login" method="POST">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+        <button type="submit">Login</button>
+
+        <small>Dont have a log in? <a href="/login/register"> Sign up!</small></a>
+        
+    </form>
 </body>
 </html>
