--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,9 +10,10 @@
     <header>
         <div class="logo">Logo</div>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Adopt</a>
-            <button class="sign-in">Sign In</button>
+            <a href="/pets">Home</a>
+            <a href="/pets/addPet">Add Pet</a>
+            <a href="/pets/gallery">Gallery</a>
+            <a href="/login"><button class="sign-in">Sign In</button></a>
         </nav>
     </header>
     <div class="container">
