--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,16 +6,20 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Log In</h1>
-    <form action="/login" method="POST">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <button type="submit">Login</button>
+    <div class="login-container">
+        <h1>Log In</h1>
+        <form action="/login" method="POST">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <button type="submit">Login</button>
 
-        <small>Dont have a log in? <a href="/login/register"> Sign up!</small></a>
-        
-    </form>
+            <br>
+    
+            <small>Dont have a log in? <a href="/login/register"> Sign up!</small></a>
+            
+        </form>
+    </div>
 </body>
 </html>
