--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,19 +6,21 @@
     <title>Sign up</title>
 </head>
 <body>
-    <h1>Sign Up</h1>
-    
-    <form action="/login/register" method="POST">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+    <div class="signup-container">
+        <h1>Sign Up</h1>
         
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        
-        <input type="submit" value="Sign-Up">
-    </form>
+        <form action="/login/register" method="POST">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            
+            <input type="submit" value="Sign-Up">
+        </form>
+    </div>
 </body>
 </html>
