--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./pd.css">
+    <link rel="stylesheet" href="../public/pd.css">
     <title>Pet Profiles</title>
 </head>
 <body>
