added new images for home page and got responsiveness to work on the form pages

--- a/public/pd.css
+++ b/public/pd.css
@@ -262,4 +262,8 @@ textarea {
     .sign-in {
         padding: 6px 11px;
     }
+
+    body {
+        background-image: url(./images/SmallBackground.png);
+    }
 }
