--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Logo</div>
+        <div class="logo"><img src="../public/images/logo1.png" alt="logo"></div>
         <nav>
             <a href="/pets">Home</a>
             <a href="/pets/addPet">Add Pet</a>
@@ -19,19 +19,20 @@
 
     <div class="container">
         <div class="mainLogo">
-            <img src="./images/Capture.PNG" alt="">
+            <img src="../public/images/logo2.png" alt="">
         </div>
-        <hr>
         <div class="aboutUs">
-            <h2>Welcome to Pet Adoption Platform</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, purus nec vulputate bibendum, ex velit semper ligula, non malesuada lectus enim vel nisi. Sed consectetur, erat sed aliquet condimentum, felis mauris malesuada diam, ut efficitur mauris ipsum vitae purus.</p>
+            <h2>Welcome to Furever Friends!</h2>
+            <p>Your journey to finding a loyal companion starts here. At Furever Friends, we believe every animal deserves a loving home, and we are here to help you find your perfect match. From playful puppies and loyal adult dogs to snuggly kittens and independent older cats, our shelter is filled with pets waiting to bring joy and companionship to your life.</p>
         </div>
+        
+        <hr>
 
         <h2>Testimonials</h2>
         <div class="testimonials">
-            <img src="./images/Capture.PNG" alt="">
-            <img src="./images/Capture.PNG" alt="">
-            <img src="./images/Capture.PNG" alt="">
+            <img src="../public/images/Testimonial1.jpg" alt="">
+            <img src="../public/images/Testimonial2.jpg" alt="">
+            <img src="../public/images/Testimonial3.jpg" alt="">
         </div>
     </div>
 
