--- a/public/home.css
+++ b/public/home.css
@@ -29,6 +29,15 @@ header {
 header .logo {
     font-size: 24px;
     font-weight: bold;
+    width: 100px;
+    height: 100px;
+    background-color: #e5e5e5b9;
+    border-radius: 15px;
+}
+
+.logo img {
+    width: 100%;
+    height: 100%;
 }
 
 nav {
@@ -78,17 +87,21 @@ nav a:hover {
     text-align: center;
 }
 
-.container .mainLogo {
+.container {
     margin-bottom: 20px;
-    max-width: 450px;
-    max-height: 350px;
+    width: auto;
     height: auto;
 }
 
+.mainLogo {
+    width: 450px;
+    height: 350px;
+}
+
 .mainLogo img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
     border-radius: 40px;
 }
 
@@ -137,6 +150,10 @@ hr {
 }
 
 @media (max-width: 600px) {
+    body {
+        background-image: url(./images/SmallBackground.png);
+    }
+
     nav a, .sign-in {
         font-size: 12px;
     }
@@ -151,5 +168,15 @@ hr {
 
     .sign-in {
         padding: 6px 11px;
+    }
+
+    header .logo {
+        width: 75px;
+        height: 75px;
+    }
+
+    .mainLogo {
+        width: 300px;
+        height: 300px;
     }
 }
