--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Logo</div>
+        <div class="logo"><img src="../public/images/logo1.png" alt="logo"></div>
         <nav>
             <a href="/pets">Home</a>
             <a href="/pets/addPet">Add Pet</a>
