--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -19,22 +19,6 @@
 
     <div class="container">
         <div class="mainLogo">
-<<<<<<< Updated upstream
-            <img src="../public/images/logo2.png" alt="">
-        </div>
-        <div class="aboutUs">
-            <h2>Welcome to Furever Friends!</h2>
-            <p>Your journey to finding a loyal companion starts here. At Furever Friends, we believe every animal deserves a loving home, and we are here to help you find your perfect match. From playful puppies and loyal adult dogs to snuggly kittens and independent older cats, our shelter is filled with pets waiting to bring joy and companionship to your life.</p>
-        </div>
-        
-        <hr>
-
-        <h2>Testimonials</h2>
-        <div class="testimonials">
-            <img src="../public/images/Testimonial1.jpg" alt="">
-            <img src="../public/images/Testimonial2.jpg" alt="">
-            <img src="../public/images/Testimonial3.jpg" alt="">
-=======
             <img src="./images/Capture.PNG" alt="Logo">
         </div>
         <hr>
@@ -64,11 +48,10 @@
                 <p>"I adopted a senior dog, and the process was straightforward and stress-free. I love how this platform helps animals find the right families, no matter their age!"</p>
                 <p>- Sarah L.</p>
             </div>
->>>>>>> Stashed changes
         </div>
     </div>
     <footer>
-        <form method="POST" action="/logout">
+        <form method="POST" action="/pets/">
             <button>Logout</button>
         </form>
     </footer>
