--- a/views/addPet.ejs
+++ b/views/addPet.ejs
@@ -46,6 +46,11 @@
             </div>
 
             <div class="form-group">
+                <label>Location</label>
+                <textarea name="location" placeholder="State"></textarea>
+            </div>
+
+            <div class="form-group">
                 <label>Owner Email</label>
                 <input type="email" name="ownerEmail">
             </div>
