functioning cloudinary uploads

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,11 +24,12 @@
                     <p><strong>Age:</strong> <%= pet.age %></p>
                     <p><strong>Description:</strong> <%= pet.description %></p>
                     <p><strong>Behavior:</strong> <%= pet.behavior %></p>
+                    <p><strong>Location>:</strong> <%= pet.location %></p>
                     <p><strong>History:</strong> <%= pet.history %></p>
                 </div>
             </div>
             <div class="pet-image">
-                <img src="<%= pet.image %>" alt="<%= pet.name %>">
+                <img src="<%= pet.imageURL %>" alt="<%= pet.name %>">
             </div>
         </main>
         <hr>
