--- a/views/addPet.ejs
+++ b/views/addPet.ejs
@@ -47,7 +47,7 @@
 
             <div class="form-group">
                 <label>Location</label>
-                <textarea name="location" placeholder="State"></textarea>
+                <input type="text" name="location" required>
             </div>
 
             <div class="form-group">
