--- a/views/editPet.ejs
+++ b/views/editPet.ejs
@@ -39,6 +39,11 @@
         </div>
 
         <div class="form-group">
+            <label>Location</label>
+            <input type="text" name="location" value="<%= pet.location %>" required>
+        </div>
+
+        <div class="form-group">
             <label>Owner Email</label>
             <input type="email" name="ownerEmail" value="<%= pet.ownerEmail %>">
         </div>
