editing the location

--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -42,16 +42,15 @@
                 <label for="age">Age</label>
                 <select id="age" name="age">
                     <option value="">Select Age</option>
-                    <option value="0">(0-3 Years)</option>
-                    <option value="2">(3-6 Years)</option>
-                    <option value="3">(6-9 Years)</option>
-                    <option value="4">(9-12 Years)</option>
-                    <option value="5">(12+ Years)</option>
+                    <option value="0-3">(0-3 Years)</option>
+                    <option value="3-6">(3-6 Years)</option>
+                    <option value="6-9">(6-9 Years)</option>
+                    <option value="9-12">(9-12 Years)</option>
+                    <option value="12+">(12+ Years)</option>
                 </select>
             
-                <button type="submit">Apply Filters</button>
+                <button type="submit" class="filter">Apply Filters</button>
             </form>
-            <button class="filter">Filter</button>
         </div>
 
         <div class="pet-grid">
