--- a/views/addPet.ejs
+++ b/views/addPet.ejs
@@ -46,8 +46,8 @@
             </div>
 
             <div class="form-group">
-                <label>Location</label>
-                <input type="text" name="location" required>
+                <label>Location (state, first 2 letters)</label>
+                <input type="text" pattern="[^0-9]+" maxlength="2" style="text-transform: uppercase;" name="location" required>
             </div>
 
             <div class="form-group">
